<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">I am coming</string>
    <string name="map_activity_label">location</string>

    <string name="notification_ticker">I Am Coming</string>
    <string name="notification_title">I Am Coming</string>
    <string name="notification_content">Your babe will receive notification</string>

    <string name="summary_notifications_enabled">Your babe will receive notification</string>
    <string name="title_notifications_enabled">power on</string>
    <string name="dialog_title_contact_number">phone number</string>
    <string name="summary_contact_number">Your chick mobile no.</string>
    <string name="title_contact_number">phone number</string>
    <string name="dialog_title_notification_text">notification message</string>
    <string name="summary_notification_text">What Do You wanna send Your babe?</string>
    <string name="title_notification_text">notification message</string>
    <string name="summary_location">where Your chick live?</string>
    <string name="title_location">location</string>
    <string name="dialog_title_radius">distance [km]</string>
    <string name="summary_radius">from what distance you wanna inform babe about Your visit</string>
    <string name="title_radius">distance</string>

    <string name="default_notification_text">Hi Babe,\nI am coming.\nMy current address is [address].\nI am [distance] from home.</string>
    <string name="complete_alert">complete</string>

</resources>